fix: adopt CORS wildcard-origin WIP, align CorsConfigTest
Adopts the foreign uncommitted WIP (per owner: wildcard stays, application.yml ldap flip reverted separately by working-tree state): CORS moves from explicit allowedOrigins list to allowedOriginPatterns ['*'] (pattern wildcards compose with allowCredentials, literal '*' does not). Removes the now-dead allowedOrigins @Value field + unused import. CorsConfigTest rewritten to the patterns contract (patterns==['*'], origins null, credentials preserved, checkOrigin echoes arbitrary origins). Fixes 2 failing CorsConfigTest cases.